# CarstensPuzzle

./: .gitignore  CMakeLists.txt
include/: Puzzle.h  Randomizer.h
include/common/: BaseObservable.h
src/: CMakeLists.txt  Puzzle.inl  Randomizer.cpp  hello.cpp
test/: CMakeLists.txt  PuzzleTest.cpp  hello_test.cpp
test/puzzle/: CMakeLists.txt  MockItem.h  MockListener.h  PuzzleTest.cpp
test/randomizer/: CMakeLists.txt  RandomizerTest.cpp
